# JereIDE

./: .gitignore  AGENTS.md  BUILDING.md  CODEBASE.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  LSP_SUPPORT.md  MIGRATE.md  PLAN.md  README.md  RELEASENOTES_FORMAT.md  install.ps1  install.sh  mkdocs.yml  requirements.txt  uninstall.sh
.agents/skills/ui-polish/: SKILL.md
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-crash-report.md  feature_request.md
.github/images/: demo.md
.github/workflows/: build.yml  ci.yml  release.yml  test.yml
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/code/: Cargo.toml
crates/code/src/: code_view.rs  edit.rs
crates/command/: Cargo.toml
crates/compose/: Cargo.toml
crates/compose/src/: compose_view.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: constants.rs  state.rs
crates/core/tests/: core_tests.rs
crates/fs/: Cargo.toml
crates/main-window/: Cargo.toml
crates/main-window/src/: lib.rs
crates/menu/: Cargo.toml
crates/menu/src/: lib.rs
crates/settings/: Cargo.toml
crates/settings/src/: lib.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: lib.rs
crates/syntax/tests/: syntax_tests.rs
crates/text/: Cargo.toml
crates/text/src/: lib.rs
crates/text/tests/: text_tests.rs
crates/ui/: Cargo.toml
crates/ui/src/: command_palette.rs  dialog.rs  lib.rs  palette.rs  status_bar.rs  tab_strip.rs  title_bar.rs  welcome.rs
data/: rs.json
data/assets/syntax/: md.json
data/assets/themes/: default.json  fall.json  github_dark.json  github_dark_high_contrast.json  github_light.json  github_light_high_contrast.json  summer.json  textadept.json
docs/guide/: index.html
docs/search/: search_index.json
docs_src/: about.md  guide.md  index.md  installation.md  screenshots.md
docs_src/stylesheets/: extra.css
jereide/: Cargo.toml  build.rs
jereide-core/: Cargo.toml
jereide-core/src/: runtime.rs  window.rs
jereide-core/src/editor/: buffer.rs  cmdview.rs  commands_dispatch.rs  common.rs  config.rs  config_template.toml  context_menu.rs  doc_view.rs  draw_context.rs  empty_view.rs  event_polling.rs  field_history.rs  git.rs  git_helpers.rs  keymap.rs  lsp.rs  lsp_client.rs  main_helpers.rs  main_loop.rs  markdown.rs  markdown_preview.rs  mod.rs  open_doc.rs  picker.rs  post_event.rs  process.rs  project_search.rs  regex.rs  render_pass.rs  storage.rs  style.rs  style_ctx.rs  subsystems.rs  syntax.rs  terminal.rs  terminal_buffer.rs  terminal_panel.rs  terminal_windows.rs  test_runner.rs  title_view.rs  (+3 more)
jereide-core/src/renderer/: cache.rs  font.rs  mod.rs
jereide-core/tests/: baseline_perf.rs
jereide/src/: main.rs
licenses/: licenses.md
resources/linux/: com.jeremy.jereide.desktop
resources/macos/: Info.plist
resources/windows/: install-file-associations.ps1  uninstall-file-associations.ps1
scripts/: build-local-linux.sh  build-local-mac.sh  build-local-win.ps1  install-mac.sh
scripts/innosetup/: innosetup.iss.in
src/: JereIDE.py
src/config/: __init__.py  config_manager.py  defaults.json  editor.json  tasks.json  tasks.py  theme.json  theme.py
src/const/: constants.py  paths.py  theme.py
src/icons/: AppIcon.icns
src/ui/: aboutDialog.py  bottomPanel.py  codeEditor.py  findReplaceDialog.py  mainWindow.py  menu.py  nativeToolbar.py  slidingPanel.py  statusBar.py
src/ui/code/: __init__.py  bottomPanel.py  codeEditor.py  codeView.py  findReplaceDialog.py  runFileDialog.py  statusBar.py  terminalWidget.py  welcomeFrame.py
src/ui/command/: __init__.py  commandView.py
src/ui/settings/: __init__.py  settingsDialog.py
src/ui/tabs/: __init__.py  notebook.py  tabDragManager.py  tabDropContainer.py  tabScrollArrow.py  tabWidget.py
src/ui/tasks/: taskDialog.py
src/utils/: autoIndent.py  autoPairing.py  fileManager.py  findReplace.py  focusManager.py  syntaxHighlight.py
