[workspace]
members = [
    "crates/app",
    "crates/core",
    "crates/settings",
    "crates/text",
    "crates/syntax",
    "crates/menu",
    "crates/main-window",
    "crates/ui",
    "crates/code",
    "crates/compose",
    "crates/fs",
]
resolver = "2"

[profile.dev]
# Saves space
debug = 0

# Fast compile
opt-level = 0

# Reduces cache
incremental = true

[workspace.package]
version = "0.22.0"

[profile.dev.build-override]
# Speed
opt-level = 0
