[package]
name = "jereide"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "JereIDE - a fast code editor built in Rust with SDL3"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.deb]
name = "jereide"
maintainer = "Jeremy-Qian"
copyright = "MIT"
extended-description = "JereIDE - a fast code editor built in Rust with SDL3"
depends = "$auto"
section = "editors"
priority = "optional"
assets = [
    ["target/release/jereide",                              "usr/bin/",                                            "755"],
    ["../data/**/*",                                        "usr/share/jereide/data/",                             "644"],
    ["../resources/linux/com.jeremy.jereide.desktop",       "usr/share/applications/jereide.desktop",              "644"],
    ["../resources/icons/jereide.png",                      "usr/share/icons/hicolor/256x256/apps/jereide.png",    "644"],
]

[package.metadata.generate-rpm]
name = "jereide"
license = "MIT"
summary = "JereIDE - a fast code editor built in Rust with SDL3"
assets = [
    { source = "target/release/jereide",                          dest = "/usr/bin/jereide",                                mode = "755" },
    { source = "../resources/linux/com.jeremy.jereide.desktop",   dest = "/usr/share/applications/jereide.desktop",          mode = "644" },
    { source = "../resources/icons/jereide.png",                  dest = "/usr/share/icons/hicolor/256x256/apps/jereide.png", mode = "644" },
    { source = "../data/**/*",                                    dest = "/usr/share/jereide/data/",                        mode = "644" },
]

[[bin]]
name = "jereide"
path = "src/main.rs"

[dependencies]
jereide-core = { path = "../jereide-core" }
anyhow = "1.0.102"
env_logger = "0.11.9"
