[package]
name = "jereide-main-window"
version.workspace = true
edition = "2021"

[dependencies]
eframe = "0.34"
jereide-core = { path = "../core" }
jereide-settings = { path = "../settings" }
jereide-fs = { path = "../fs" }
jereide-menu = { path = "../menu" }
jereide-ui = { path = "../ui" }
jereide-code = { path = "../code" }
jereide-command = { path = "../command" }
raw-window-handle = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = "0.2"
